--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="totale_prezzo"></div>
+    <div id="totale_prezzo">Devi pagare: </div>
     <script src="js/app.js"></script>
 </body>
 </html>
