--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="totale_prezzo">Devi pagare: </div>
+    <div class="contenitore">
+        <div class="testo">
+            <p>Devi pagare:</p> 
+            <p id="totale_prezzo">€ <p> 
+        </div>
+</div>
     <script src="js/app.js"></script>
 </body>
 </html>
